# computacao_grafica

./: CMakeLists.txt  Leia-Me.txt  Makefile  OpenGL_C.cbp  README.md  main.c  requisitos.md
assets/: pato_borracha.mtl
docs/: windows_mingw_clion.md
include/: assets.h  camera.h  meteoro.h  player.h  pontuacao.h  scene.h
src/: assets.c  camera.c  main.c  meteoro.c  player.c  pontuacao.c  scene.c
